<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MmobBrowser">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/browser_web_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/browser_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/browser_close_button"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toTopOf="@+id/title_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Title container -->
        <LinearLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/browser_close_button"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/browser_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browser_title"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/ic_padlock"
                    android:contentDescription="@string/browser_padlock_icon"/>

                <Space
                    android:layout_width="4dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/browser_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/browser_subtitle"
                    android:textColor="#7F8794"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Header border-->
    <View
        android:id="@+id/header_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E9EE"
        app:layout_constraintBottom_toTopOf="@+id/browser_web_view"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <!-- WebView -->
    <WebView
        android:id="@+id/browser_web_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/footer_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_border" />

    <!-- Footer border-->
    <View
        android:id="@+id/footer_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E9EE"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@id/browser_web_view" />

    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browser_web_view">

        <ImageButton
            android:id="@+id/browser_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/browser_back_button"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/browser_forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:contentDescription="@string/browser_forward_button"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:src="@drawable/ic_arrow_forward"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>